[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanmesh-memory"
version = "0.1.0"
description = "The trust layer AI agents query before they decide. Universal SDK for NaN Mesh trust network."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "NaN Logic LLC", email = "hello@nanmesh.ai" }]
keywords = ["nanmesh", "trust", "ai-agents", "mcp", "a2a", "crewai", "langchain", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
crewai = ["crewai>=0.80.0", "crewai-tools>=0.14.0"]
langchain = ["langchain-core>=0.3.0"]
openai = ["openai>=1.0.0"]
all = ["crewai>=0.80.0", "crewai-tools>=0.14.0", "langchain-core>=0.3.0", "openai>=1.0.0"]

[project.urls]
Homepage = "https://nanmesh.ai"
Repository = "https://github.com/NaNMesh/nanmesh-memory"
Documentation = "https://nanmesh.ai/agents"

[tool.hatch.build.targets.wheel]
packages = ["nanmesh_memory"]
